Update circle progress

--- a/progressSteps/index.html
+++ b/progressSteps/index.html
@@ -19,9 +19,22 @@
             <div class="circle">4</div>
         </div>
 
-        <button class="btn" id="prev" disabled>prev</button>
+        <button class="btn" id="prev" disabled>Prev</button>
         <button class="btn" id="next">Next</button>
     </div>
+
+    <div class="round-container">
+        
+        <div class="round-progress-container" id="progressRound">
+            <span id="roundcircle1">0%
+                <span id="roundcircle2"></span>
+            </span>
+            
+        </div>
+        <button class="round-btn" id="roundprev">Prev</button>
+        <button class="round-btn" id="roundnext">Next</button>
+    </div>
+
 
 
     <script src="script.js"></script>
