--- a/rockPaperScissor/index.html
+++ b/rockPaperScissor/index.html
@@ -35,29 +35,29 @@
 
         <div class="scores" id="scores">
             <div class="bing won" id="won">
-                <label for="won">WON-</label> 55
+                <label for="won">WON-</label> <p>0</p>
             </div>
 
             <div class=" bing loss" id="loss">
-                <label for="won">LOSS-</label> 55
+                <label for="won">LOSS-</label> <p>0</p>
             </div>
 
             <div class="bing draw" id="draw">
-                <label for="won">DRAW-</label> 55
+                <label for="won">DRAW-</label> <p>0</p>
             </div>
 
         </div>
 
         <div class="result-container" style="display: none;" >
-            <div class="result-box">
+            <div class="result-box" >
                 <div class="player your-choice">
                     <h2>You chose</h2>
-                    <img id="player-img" src="img/paper.png" alt="your choice">
+                    <img id="player-img" src="" alt="your choice">
                     <p id="player-text"></p>
                 </div>
                 <div class="player computer-choice">
                     <h2>Computer chose</h2>
-                    <img id="computer-img" src="img/scissor.png" alt="computer choice">
+                    <img id="computer-img" src="" alt="computer choice">
                     <p id="computer-text"></p>
                 </div>
             </div>
